<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.natrocare.naturocare.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.natrocare.naturocare.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/dashboard_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.natrocare.naturocare.ui.notifications.NotificationsFragment"
        android:label="@string/notification"
        tools:layout="@layout/notifications_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.natrocare.naturocare.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />
</navigation>