<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/lockImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"/>

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="#0A806A"
        android:textAlignment="center"
        android:layout_marginTop="40sp"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp"
        android:layout_marginBottom="40sp"
        android:layout_below="@+id/lockImage"/>

    <TextView
        android:id="@+id/naturoCareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naturocare"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#13EBC4"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        />

    <ImageButton
        android:id="@+id/WelcomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_btn"
        android:layout_below="@+id/signInText"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login_button" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#127BCF"
        app:civ_border_width="2dp"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/left_leaf" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/right_leaf" />

</RelativeLayout>